fixed the missing length input

--- a/compfilsim3d.ipynb
+++ b/compfilsim3d.ipynb
@@ -202,16 +202,16 @@
     "set1=widgets.HBox([mat_label,input_material])\n",
     "set2=widgets.HBox([dia_label,input_diameter])\n",
     "set3=widgets.HBox([len_label,input_length])\n",
-    "set3=widgets.HBox([vol_label,input_volume])\n",
-    "set4=widgets.HBox([al1_label,input_alignment_value])\n",
-    "set5=widgets.HBox([al2_label,align_check])\n",
+    "set4=widgets.HBox([vol_label,input_volume])\n",
+    "set5=widgets.HBox([al1_label,input_alignment_value])\n",
+    "set6=widgets.HBox([al2_label,align_check])\n",
     "\n",
     "\n",
     "vlabels = widgets.VBox([mat_label,dia_label, len_label, vol_label, al1_label, al2_label])\n",
     "vinput = widgets.VBox([input_material,input_diameter, input_length, input_volume, input_alignment_value, align_check])\n",
     "\n",
     "inputs2 = widgets.HBox([vlabels,vinput])\n",
-    "input1 = widgets.VBox([set1,set2,set3,set4,set5,input_alignment_range],layout=box_layout)\n",
+    "input1 = widgets.VBox([set1,set2,set3,set4,set5,set6,input_alignment_range],layout=box_layout)\n",
     "#FullBox = widgets.VBox([input1])\n",
     "\n",
     "\n",
