Trying to debug crashing

--- a/compfilsim3d.ipynb
+++ b/compfilsim3d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -279,7 +279,37 @@
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a255db6e411447aa32838b7afb77f18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>VBox</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "VBox(children=(HBox(children=(VBox(children=(VBox(children=(HBox(children=(Button(description='Material:', layout=Layout(width='200px'), style=ButtonStyle(button_color='white'), tooltip='Choose from a list of materials.'), Dropdown(index=3, layout=Layout(width='160px'), options=('Silver', 'Copper', 'Gold', 'Silver-Copper Alloy'), value='Silver-Copper Alloy'))), HBox(children=(Button(description='Diameter (nm)', layout=Layout(width='200px'), style=ButtonStyle(button_color='white'), tooltip='Diameter of the nanowires, in nanometers.'), BoundedFloatText(value=250.0, layout=Layout(width='80px'), max=250.0, min=25.0, step=0.1))), HBox(children=(Button(description='Length (um)', layout=Layout(width='200px'), style=ButtonStyle(button_color='white'), tooltip='Average length of a nanowire, in millimeters.'), BoundedFloatText(value=30.0, layout=Layout(width='80px'), max=30.0, min=10.0, step=0.1))), HBox(children=(Button(description='% Volume', layout=Layout(width='200px'), style=ButtonStyle(button_color='white'), tooltip='Average length of a nanowire, in millimeters.'), BoundedFloatText(value=1.0, layout=Layout(width='80px'), max=10.0, min=0.25, step=0.05))), HBox(children=(Button(description='Alignment (deg)', layout=Layout(width='200px'), style=ButtonStyle(button_color='white'), tooltip='Single value maximum angle of nanowires to the direction of current. For example, 90 degrees would allow the nanowires to be randomly oriented while 0 degrees would force the nanowires to be parallel.'), BoundedFloatText(value=90.0, layout=Layout(width='80px'), max=90.0, step=5.0))), HBox(children=(Button(description='Use alignment range', layout=Layout(width='320px'), style=ButtonStyle(button_color='white'), tooltip='To graph resistivity for multiple alignment degrees, check the box and use the slider to select a range of values for alignment values. The alignment value is the maximum angle of nanowires to the direction of current. For example, 90 degrees would allow the nanowires to be randomly oriented while 0 degrees would force the nanowires to be parallel.'), Checkbox(value=False))), SelectionRangeSlider(disabled=True, index=(8, 8), options=(10, 20, 30, 40, 50, 60, 70, 80, 90), value=(90, 90))), layout=Layout(border='1px solid rgb(180,180,180)', display='flex', justify_content='center', padding='4px')), Label(value='', layout=Layout(display='flex', height='8px')), VBox(children=(FloatProgress(value=0.0, bar_style='success', description='Progress:', max=10.0), Button(button_style='success', description='Start', style=ButtonStyle(), tooltip='Click here to run...')), layout=Layout(border='1px solid rgb(180,180,180)', display='flex', justify_content='center', padding='4px')), Label(value='', layout=Layout(display='flex', height='8px')), Accordion(children=(Output(layout=Layout(overflow_y='auto')),), _titles={'0': 'Processing Output'})), layout=Layout(width='45%')), Label(value='', layout=Layout(display='flex', width='8px')), Tab(children=(Output(layout=Layout(display='flex', justify_content='center')), Output(layout=Layout(display='flex', justify_content='center'))), layout=Layout(width='100%'), _titles={'0': 'Volume Plot', '1': 'Resistance Plot'}))),))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#display(title)\n",
     "#tab_view = widgets.Tab()\n",
@@ -732,6 +762,7 @@
     "                p = distBetweenLines(l1, l2)\n",
     "                lines[i].append((p[0], j))\n",
     "                lines[j].append((p[1], i))\n",
+    "    out.append_stdout(\"<1>\")\n",
     "    return G, lineswi\n",
     "\n",
     "def is_between(b1, x, b2):\n",
@@ -832,6 +863,7 @@
     "            y = [line[0][1], line[1][1]]\n",
     "            z = [line[0][2], line[1][2]]\n",
     "            segments.append([x, y, z])\n",
+    "        out.append_stdout(\"<2>\")\n",
     "        #-------------Graph Stuff--------------\n",
     "\n",
     "        if is_first:\n",
@@ -844,6 +876,7 @@
     "                ipv.show()\n",
     "            #out.append_stdout(ipv.show())  \n",
     "        #------------End Graph Stuff-----------\n",
+    "        out.append_stdout(\"<3>\")\n",
     "        progress_bar.value = progress_bar.value + 1.0/x_dim\n",
     "        t2 = time.time()\n",
     "        K, K_sources, K_sinks = find_connecting_cluster(segments, H, 0, length_of_poly)\n",
