domain size function added

--- a/compfilsim3d.ipynb
+++ b/compfilsim3d.ipynb
@@ -1073,7 +1073,20 @@
     "    if m == 'Silver-Copper Alloy':\n",
     "        return 4.31e7\n",
     "#     if m == 'Carbon Nanotubes':\n",
-    "#         return "
+    "#         return \n",
+    "\n",
+    "def domain_size(volume_fraction,wire_diameter,wire_length):\n",
+    "    #Function returns width_of_poly and length_of_poly\n",
+    "    #volume fraction should be (vol%/100), wire sizes in um\n",
+    "    \n",
+    "    n_wires = 3000 # Number of wires, currently 3000 will be okay for most domains, can optimize later\n",
+    "    domain_length = 5/4 * wire_length\n",
+    "    volume_wire = get_wire_volume(wire_length,wire_diameter)\n",
+    "    domain_width = math.sqrt((n_wires * volume_wire)/(volume_fraction * domain_length))\n",
+    "    return domain_width, domain_length\n",
+    "\n",
+    "def get_wire_volume(length, diameter):\n",
+    "    return math.pi * ((diameter / 2) ** 2) * length"
    ]
   },
   {
@@ -1135,8 +1148,9 @@
     "    rad = get_radians(alignment)\n",
     "    cond_0 = get_cond_0(input_material.value)\n",
     "    #width_of_poly = get_domain_size(volume_fraction) \n",
-    "    width_of_poly = 85\n",
-    "    length_of_poly = 35\n",
+    "    #width_of_poly = 85\n",
+    "    #length_of_poly = 35\n",
+    "    width_of_poly, length_of_poly = domain_size(volume_fraction, diameter, mean_nanowire_length)\n",
     "    SD = .5\n",
     "    theta_lower = -rad\n",
     "    theta_upper = rad\n",
