limit number of wires to be drawn

--- a/compfilsim3d.ipynb
+++ b/compfilsim3d.ipynb
@@ -871,8 +871,8 @@
     "            out.append_stdout(\"Plotting with ipyvolume\\n\")\n",
     "            with plotout:\n",
     "                fig = ipv.figure(width=680,height=600)\n",
-    "                for seg in segments:\n",
-    "                    ipv.plot(np.array(seg[0]), np.array(seg[1]), np.array(seg[2]), color=random.choice(colors))\n",
+    "                for seg in segments[:min(1000, len(segments))]:\n",
+    "                     ipv.plot(np.array(seg[0]), np.array(seg[1]), np.array(seg[2]), color=random.choice(colors))\n",
     "                ipv.show()\n",
     "            #out.append_stdout(ipv.show())  \n",
     "        #------------End Graph Stuff-----------\n",
@@ -1389,7 +1389,7 @@
     "    topicdesc_widg.value = topic_dict[topic_widg.value]\n",
     "def start_but_cb(change):\n",
     "    progress_bar.value = 0\n",
-    "    ipv.clear()\n",
+    "    #ipv.clear()\n",
     "    plotout.clear_output()\n",
     "    start_but.description = 'Running'\n",
     "    start_but.button_style = 'warning'\n",
@@ -1401,7 +1401,7 @@
     "    #print(\"Call back on clear_but\")\n",
     "    out.clear_output()\n",
     "    progress_bar.value = 0\n",
-    "    ipv.clear()\n",
+    "    #ipv.clear()\n",
     "    \n",
     "topic_widg.observe(topic_cb, names='value')\n",
     "start_but.on_click(start_but_cb)\n",
